# wdq

./: .gitignore  pyproject.toml  t.py
data/: wikidata-connected-wikis.json  wikidata-languages.json
src/wdq/: __init__.py  client.py  models.py  sites.py
src/wdq/languages/: __init__.py  literals.py
