[project]
name = "wdq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DinhHuy2010", email = "huy04052010@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
